[package]
name = "kaosu-packer"
description = "あばばばばばばばばば"
version = "0.1.0"
authors = ["Zejun Li <me@zejun.li>"]
edition = "2018"

[dependencies]
yew = "0.5.0"
stdweb = "0.4"
csv = "1.0"
serde = { version = "1.0", features = ["derive"] }
quick-error = "1.2"

[dependencies.rand]
version = "0.6"
features = ["stdweb"]
