[package]
name = "kaosu-packer"
description = "あばばばばばばばばば"
version = "0.1.0"
authors = ["Zejun Li <me@zejun.li>"]
edition = "2018"

[features]
default = ["rayon"]

[dependencies]
rand = "0.6"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.rayon]
version = "1.0"
optional = true

[dev-dependencies]
criterion = "0.2"
serde = { version = "1.0", features = ["derive"] }
csv = "1.0"

[[bench]]
name = "packer"
harness = false

[workspace]
members = ["visualizer"]
