[package]
name = "kaosu-packer"
description = "A biased random key genetic algorithm for 2D and 3D bin packing problems"
version = "0.1.0"
authors = ["Zejun Li <me@zejun.li>"]
edition = "2018"
repository = "https://github.com/bobotu/kaosu-packer"
readme = "README.md"
license = "Apache-2.0"
keywords = ["3d-bin-packing"]
categories = ["algorithms"]
exclude = [".gitignore"]

[features]
default = ["rayon"]

[dependencies]
rand = "0.6"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.rayon]
version = "1.0"
optional = true

[dev-dependencies]
criterion = "0.2"
serde = { version = "1.0", features = ["derive"] }
csv = "1.0"

[[bench]]
name = "packer"
harness = false

[workspace]
members = ["visualizer"]
